Updated dto types
