# server/docs/swagger.json
@@ -124,7 +124,11 @@
                             "POST",
                             "PUT",
                             "DELETE",
-                            "PATCH"
+                            "PATCH",
+                            "HEAD",
+                            "OPTION",
+                            "TRACE",
+                            "CONNECT"
                         ],
                         "type": "string",
                         "description": "Filter by HTTP method (e.Example, GET, POST)",
@@ -603,10 +607,42 @@
                 }
             }
         },
+        "dto.RequestsDto": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "latency": {
+                    "description": "Latency in Milliseconds",
+                    "type": "integer"
+                },
+                "method": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "response": {
+                    "type": "integer"
+                },
+                "responseTime": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ResDataDto": {
             "type": "object",
             "properties": {
-                "data": {},
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.RequestsDto"
+                    }
+                },
                 "pagination": {
                     "$ref": "#/definitions/dto.Pagination"
                 }
@@ -636,9 +672,6 @@
                     "type": "string"
                 },
                 "oib": {
-                    "type": "string"
-                },
-                "policeToken": {
                     "type": "string"
                 },
                 "residence": {
