# server/dto/resReqDto.go
@@ -2,8 +2,8 @@ package dto
 
 type ListQuery struct {
 	Search   string `form:"search"`
-	Method   string `form:"method"`
-	Response int    `form:"response"` // Gin binds '0' if not present
+	Method   string `form:"method" binding:"oneof= GET POST PUT DELETE PATCH HEAD OPTION TRACE CONNECT"`
+	Response int    `form:"response,one"` // Gin binds '0' if not present
 	Limit    int    `form:"limit"`
 	Offset   int    `form:"offset"`
 	SortBy   string `form:"sort_by"`
