# server/model/request.go
@@ -8,13 +8,13 @@ import (
 )
 
 type Request struct {
-	ID     uint   `gorm:"primarykey"`
-	Method string `gorm:"type:varchar(5);not null"`
-	//Response     string `gorm:"type:text;null"`
+	ID           uint   `gorm:"primarykey"`
+	Method       string `gorm:"type:varchar(5);not null"`
 	Response     int    `gorm:"type:int;null"`
 	Path         string `gorm:"type:varchar(150);not null"`
 	ResponseTime time.Time
-	CreatedAt    time.Time `gorm:"not null"`
+	CreatedAt    time.Time     `gorm:"not null"`
+	Latency      time.Duration `gorm:"null"`
 }
 
 func (r *Request) FromRequest(req *http.Request) error {
